--- a/calculadora/index.css
+++ b/calculadora/index.css
@@ -1,11 +1,11 @@
 * {
-    font-family: 'fraunces', serif;
+    font-family: 'DM Sans', sans-serif;
     color: #fff;
 }
 
 body {
     margin: 0;
-    background-color: #224878;
+    background-color: #1b2525;
 }
 
 .container {
@@ -17,12 +17,12 @@ body {
 
 .calculadora {
     display: grid;
-    grid-template-columns: repeat(4,75px);
+    grid-template-columns: repeat(4, 75px);
     grid-template-rows: 160px repeat(5, 75px);
-    background-color: #00916c;
+    background-color: #65d69c;
     padding: 15px;
     border-radius: 32px;
-    box-shadow: 15px 10px 0px 5px #00000033;
+    box-shadow: 15px 10px 0px 5px #00000015;
 }
 
 button {
@@ -32,8 +32,8 @@ button {
     border-radius: 32px;
     font-size: 1.5em;
     border: none;
-    background-color: #00916c;
-    box-shadow: 5px 5px 10px -3px #00000040, -5px -5px 15px 3px #00ffc11f;
+    background-color: #2a8f7a;
+    box-shadow: 5px 5px 10px -3px #00000070, -5px -5px 15px 3px #00ffc11f;
 }
 
 button:active {
@@ -44,14 +44,18 @@ button:focus {
     outline: none;
 }
 
+.col-2 {
+    grid-column: span 2;
+}
+
 .display {
     grid-column: 1 /-1;
     padding: 16px;
     display: flex;
     margin: 10px 10px 20px ;
-    flex-direction: colum;
+    flex-direction: column;
     align-items: flex-end;
-    background-color: #363636 ;
+    background-color: #283f40 ;
     border-radius: 32px;
     text-align: right;
     justify-content: space-between;
@@ -59,9 +63,6 @@ button:focus {
     box-shadow: 0px 0px 0px 10px #00000033;
 }
 
-.col-2 {
-    grid-column: span 2;
-}
 
 #valor-actual {
     font-size: 1.5em;
@@ -69,4 +70,5 @@ button:focus {
 }
 #valor-anterior {
     font-size: 2em;
+    padding-top: 30px;
 }
